implemented the recommendation route

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,7 @@
   },
   "plugins": ["prettier"],
   "rules": {
+    "import/prefer-default-export": "off",
     "prettier/prettier": "error",
     "import/extensions": [
       "error",
